# OD-Net-Generation

./: README.md
od_zero_shot/: HANDOFF.md  README.md  pyproject.toml
od_zero_shot/configs/: default.yaml
od_zero_shot/src/od_zero_shot/: cli.py
od_zero_shot/src/od_zero_shot/data/: geo.py  raw.py  sample_builder.py  samples.py
od_zero_shot/src/od_zero_shot/eval/: inference.py  metrics.py
od_zero_shot/src/od_zero_shot/models/: autoencoder.py  diffusion.py  graphgps.py
od_zero_shot/src/od_zero_shot/train/: common.py  datasets.py  losses.py  runner.py  trainers.py
od_zero_shot/src/od_zero_shot/utils/: config.py
od_zero_shot/tests/: test_cli.py  test_data.py  test_models.py
